--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "uuid": "6bf423f8-e484-4239-9738-83759c4113f2"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": ">=14.19.1 <=18.x.x"
   },
   "license": "MIT"
 }
